tests/to_many_enum_variants/error.txt
Validation error: ./tests/to_many_enum_variants/to_many_enum_variants.fae:1
 Enum `LargeEnum` has more than 256 variants, this is currently unsupported and disallowed
  1| enum LargeEnum {
          ^^^^^^^^^
